--- a/Wedding01/Views/Shared/_Layout.cshtml
+++ b/Wedding01/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
             </svg>
         </button>
         <button id="pause-btn" class="button pause" style="display:none;">
-            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="27" fill="#fff" class="icon" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="27" fill="#fff" class="icon-audio" viewBox="0 0 16 16">
                 <path d="M6.717 3.55A.5.5 0 0 1 7 4v8a.5.5 0 0 1-.812.39L3.825 10.5H1.5A.5.5 0 0 1 1 10V6a.5.5 0 0 1 .5-.5h2.325l2.363-1.89a.5.5 0 0 1 .529-.06z" />
                 <path d="M10.793 6.354a.5.5 0 1 1 .708.708L11.5 7.293l1.646 1.647a.5.5 0 0 1-.708.708L11.5 8.707l-1.646 1.647a.5.5 0 0 1-.708-.708L10.793 8 9.146 6.354a.5.5 0 1 1 .708-.708L11.5 7.293l1.646-1.647a.5.5 0 0 1 .708 0z" />
             </svg>
