--- a/Wedding01/wwwroot/css/style.css
+++ b/Wedding01/wwwroot/css/style.css
@@ -2638,7 +2638,7 @@ textarea.form-control {
     }
 }
 
-.icon {
+.icon-audio {
     width: 25px; /* Kích thước biểu tượng */
     height: 27px; /* Chiều cao biểu tượng */
     fill: #fff; /* Màu sắc biểu tượng */
