--- a/Wedding01/Views/Home/Index.cshtml
+++ b/Wedding01/Views/Home/Index.cshtml
@@ -109,7 +109,7 @@
                             <div class="img" style="background-image: url(images/Gallery/_LYL9261_1.jpg);"></div>
                             <div class="text mt-4 px-4">
                                 <h2>Nguyễn Khánh</h2>
-                                <p>Là lập trình viên hiện đang công tác tại một công ty công nghệ ở Ba Đình, Hà Nội. Anh là người hiền lành và ít nói</p>
+                                <p>Một chàng trai đơn giản</p>
                             </div>
                         </div>
                     </div>
@@ -464,7 +464,7 @@
                                         <p class="time mb-4"><span>13/10/2024</span></p>
                                         <span class="subheading mb-5">Bắt đầu vào lúc 11:00</span>
                                         <span class="subheading mb-5" style="font-size:15px; font-style:italic; color:#fc7d80; text-transform:unset !important">
-                                            Sự có mặt của bạn là nguồn thu nhập vô cùng quý giá cho chúng tôi!
+                                            Sự có mặt của bạn là lời chúc quý giá nhất dành cho cho chúng tôi!
                                         </span>
                                     </div>
                                 </div>
