--- a/Wedding01/Views/Shared/_Layout.cshtml
+++ b/Wedding01/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
             </div>
         </div>
     </nav>
-    <div class="iconGift" id="moving-icon"><b onclick="showformQR()" title="Gửi quà tặng">🎁</b></div>
+    <div class="iconGift" id="moving-icon"><b onclick="showformQR()" title="Gửi quà tặng"><img src="~/images/tijm_gnyz_210701.png" style="width:50px" /></b></div>
     <div class="audio-controls">
         <button id="play-btn" class="button">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="27" fill="#fff" class="bi bi-volume-up-fill" viewBox="0 0 16 16">
