--- a/Wedding01/Views/Home/Index.cshtml
+++ b/Wedding01/Views/Home/Index.cshtml
@@ -236,12 +236,12 @@
                 <div class="carousel-testimony owl-carousel ftco-owl">
                     <div class="item">
                         <div class="testimony-wrap py-4">
-                            <div class="text">
-                                <p class="mb-4">Chúc mừng hạnh phúc, cây tình yêu sau hơn mười năm trời, trải qua bao nắng hạn hay mưa sa, cuối cùng cũng đã kết trái ngọt!</p>
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">Chúc mừng hạnh phúc, cây tình yêu sau hơn mười năm trời, trải qua bao nắng hạn hay mưa sa, cuối cùng cũng đã kết trái ngọt!</p>
                                 <div class="d-flex align-items-center">
                                     <div class="user-img" style="background-image: url(images/logo01.png)"></div>
                                     <div class="pl-3">
-                                        <p class="name">Cao Trung Hiếu</p>
+                                        <p class="name">Bạn Hiếu</p>
                                     </div>
                                 </div>
                             </div>
@@ -249,12 +249,12 @@
                     </div>
                     <div class="item">
                         <div class="testimony-wrap py-4">
-                            <div class="text">
+                            <div class="text" style="min-height:195px">
                                 <p class="mb-4">Dẫu trải qua trăm ngàn sóng gió, cuối cùng chúng ta đã về bên nhau. Chúc hai bạn trăm năm hạnh phúc, sớm sinh quý tử.</p>
                                 <div class="d-flex align-items-center">
                                     <div class="user-img" style="background-image: url(images/Hiep.jpg)"></div>
                                     <div class="pl-3">
-                                        <p class="name">Cao Văn Hiệp</p>
+                                        <p class="name">Bạn Hiệp</p>
                                     </div>
                                 </div>
                             </div>
@@ -262,12 +262,12 @@
                     </div>
                     <div class="item">
                         <div class="testimony-wrap py-4">
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">Úi dời 😃chúc mừng hạnh phúc bạn</p>
                                 <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/quang.jpg)"></div>
+                                    <div class="user-img" style="background-image: url(images/DucAnh.jpg)"></div>
                                     <div class="pl-3">
-                                        <p class="name">Trương Quang</p>
+                                        <p class="name">Bạn Đức Anh</p>
                                     </div>
                                 </div>
                             </div>
@@ -275,12 +275,14 @@
                     </div>
                     <div class="item">
                         <div class="testimony-wrap py-4">
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Dồi ôi mối tình dài nhất lịch sử đã cưới rồi hehe. Chúc mừng chú thím nhá
+                                </p>
                                 <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/Phuong.jpg)"></div>
+                                    <div class="user-img" style="background-image: url(images/LeNhung.jpg)"></div>
                                     <div class="pl-3">
-                                        <p class="name">Lê Văn Phương</p>
+                                        <p class="name">Cháu Nhung</p>
                                     </div>
                                 </div>
                             </div>
@@ -288,12 +290,14 @@
                     </div>
                     <div class="item">
                         <div class="testimony-wrap py-4">
-                            <div class="text">
-                                <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Yêu nhau lâu phết rồi nhỉ. Chúc mừng bạn nha =))
+                                </p>
                                 <div class="d-flex align-items-center">
-                                    <div class="user-img" style="background-image: url(images/Khanh1.jpg)"></div>
+                                    <div class="user-img" style="background-image: url(images/Thai.jpg)"></div>
                                     <div class="pl-3">
-                                        <p class="name">Mai Công Khánh</p>
+                                        <p class="name">Bạn Thái</p>
                                     </div>
                                 </div>
                             </div>
@@ -301,7 +305,97 @@
                     </div>
                     <div class="item">
                         <div class="testimony-wrap py-4">
-                            <div class="text">
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Thực sự chúc mừng bạn tôi. Quả tình yêu thế kỉ này của bạn thực sự là kiên trì bền bỉ làm tôi ngưỡng mộ bạn quá :)))))
+                                </p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url(images/Nguyet.jpg)"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Bạn Nguyệt</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Chúc mừng bạn nhé. Cuối cùng cũng đến đc với nhau. Chúc 2 bạn hạnh phúc nhé
+                                </p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url(images/Tu.jpg)"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Bác sĩ Tú</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Chúc mừng Khánh nhé. Tình yêu đáng ngưỡng mộ
+                                </p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url(images/Nhi.jpg)"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Bạn Nhi</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Ui choa chúc mừng 2 vợ chồng nhá 😍😍😍
+                                </p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url(images/Giang.jpg)"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Bạn Giang</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Chúc mừng hạnh phúc 2 bạngggg
+                                </p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url(images/Hien.jpg)"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Bạn Hiền</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text" style="min-height:195px">
+                                <p class="mb-4" style="min-height:91px">
+                                    Chúc mừng hạnh phúc Khánh nha ^^
+                                </p>
+                                <div class="d-flex align-items-center">
+                                    <div class="user-img" style="background-image: url(images/HienNam.jpg)"></div>
+                                    <div class="pl-3">
+                                        <p class="name">Bạn Hiển</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap py-4">
+                            <div class="text" style="min-height:195px">
                                 <p class="mb-4">Chúc mừng hạnh phúc 2 bạn nhé. Chúc 2 bạn con đàn cháu đống sống vs nhau đến lúc đầu bạc răng long :)))</p>
                                 <div class="d-flex align-items-center">
                                     <div class="user-img" style="background-image: url(images/NguyenQuocDung.png)"></div>
